# penny

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: check.yml  client-check.yml  testflight.yml
browser/: manifest.json
browser/page/: page.css  page.html
browser/src/: protocol.ts
docs/: agent-supervisor-runbook.md  agent-task-workflow.md  collector-run-health-reasoning-plan.md  eval-report-format.md  pr-review-guide.md  prompt-writing-guide.md  self-improvement-loop.md  tool-narration-plan.md
eval-reports/v1/: README.md
github_api/: __init__.py  api.py
penny/: CLAUDE.md  pyproject.toml
penny-client/: .swiftlint.yml  AGENTS.md  ExportOptions.plist  README.md
penny-client/PennyClient/: AppDelegate.swift
penny-client/PennyClient.xcodeproj/: project.pbxproj
penny-client/PennyClientTests/: ChatMessageContentParserTests.swift  DatabaseServiceTests.swift  MessageViewModelTests.swift  PennyAdminViewModelTests.swift  PennyClientTests.swift  PennyServiceAdminSurfaceTests.swift  PennyWebSocketClientTests.swift  PrefsTests.swift  SearchServiceTests.swift  TestSupport.swift
penny-team/: pyproject.toml
penny-team/penny_team/: monitor.py
penny-team/penny_team/monitor/: CLAUDE.md
penny-team/penny_team/worker/: CLAUDE.md
penny-team/tests/: conftest.py  test_monitor.py
penny/penny/: config.py  config_params.py  constants.py  conversation_machine.py  datetime_utils.py  penny.py  preflight.py  prompts.py  responses.py  (+2 more)
scripts/: client-check.sh
similarity/: __init__.py
(+308 files in other folders)
