[project]
name = "penny-team"
version = "0.1.0"
description = "Autonomous agent orchestrator for Penny — manages PM, architect, and worker agents"
authors = [{ name = "Jared Lockhart" }]
requires-python = ">=3.14"
dependencies = [
    "PyJWT[crypto]>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Not an importable package — install for dependencies only.
# PYTHONPATH is set in the Dockerfile so imports resolve from /repo/penny-team/.
py-modules = []
packages = []

[dependency-groups]
dev = [
    "ruff==0.15.18",
    "ty==0.0.52",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.environment]
python = "/usr/local/bin/python"

[tool.ty.rules]
unresolved-import = "ignore"
